--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public-News-portal</title>
+    
+<link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Welcome </h1>
 
+
+
+
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="index.js"></script>
 </body>
 </html>
