added menu list where as typs of news list

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     <header id="meau-list">
         <div class="navbar bg-base-100 ">
             <div class="navbar-center  lg:flex">
-              <ul class="menu menu-horizontal p-0">
+              <!-- <ul class="menu menu-horizontal p-0">
                 <li><a>Item 1</a></li>
                 <li><a>Item 3</a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
     </header>
