create menubar list

--- a/index.html
+++ b/index.html
@@ -71,17 +71,23 @@
             </div>
           </div>
     </header>
-    <header id="meau-list">
+    <header >
         <div class="navbar bg-base-100 ">
             <div class="navbar-center  lg:flex">
-              <!-- <ul class="menu menu-horizontal p-0">
-                <li><a>Item 1</a></li>
-                <li><a>Item 3</a></li>
-              </ul> -->
+              <ul id="meau-list" class="menu menu-horizontal p-0">
+                <!-- <li><a>Item 1</a></li>
+                <li><a>Item 3</a></li> -->
+              </ul>
             </div>
           </div>
     </header>
 
+    <main>
+      <section>
+          
+      </section>
+    </main>
+   
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="index.js"></script>
