create news details list and added images ,and  create card

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
 
 </head>
-<body>
-    <header class="  md:max-w-6/12 lg:max-w-max sm:max-w-2/12">
-        <div class="navbar bg-base-100 border-4 border-indigo-200 border-b-indigo-500 ">
+<body class="p-5">
+    <header class="  md:max-w-max lg:max-w-max sm:max-w-2/12">
+        <div class="navbar bg-base-100 border-b-4 border-indigo-200 border-b-indigo-500 ">
             <div class="flex-1">
               <a class="btn btn-ghost normal-case text-3xl text-yellow-500 ">Public portal</a>
             </div>
@@ -25,12 +25,12 @@
                         <div class="collapse-content"> 
                           <div>
                             <h1 class="text-xl">Difference between var, let and const  in JavaScript:</h1>
-                            <p>var: The scope of the var keyword is the global or function scope. <br> It means variables defined outside the function can be accessed globally,  and variables defined inside a particular function can be accessed within the function. </p>
+                            <p>var: The scope of the var keyword is the global or function scope. <br> It means variables defined outside the function can be accessed globally,and variables defined inside a particular function can be accessed within the function. </p>
                             <p>
                                 let : The scope of a let variable is only block scoped.  It can’t be accessible outside the particular block ({block}). 
                             </p>
                             <p>
-                                const : When users declare a const variable, they need to initialize it, otherwise, it returns an error.  The user cannot update the const variable once it is declared. 
+                                const : When users declare a const variable, they need to initialize it, otherwise, it returns an error.The user cannot update the const variable once it is declared. 
                             </p>
                           </div>
                           <div>
@@ -51,7 +51,7 @@
                           <div>
                             <h1 class="text-xl"> Why use template string in JavaScript?</h1>
                             <p>
-                                It lets us insert/interpolate variables and  expressions into strings without needing to concatenate like in older versions of JavaScript.
+                                It lets us insert/interpolate variables and expressions into strings without needing to concatenate like in older versions of JavaScript.
                             </p>
                           </div>
                         </div>
@@ -83,8 +83,19 @@
     </header>
 
     <main>
-      <section>
-          
+      <section id="news-container">
+        <!-- <div  class="card  card-compact w-96 bg-base-100 shadow-xl grid sm:grid-cols-1 lg:grid-cols-2 gap-4">
+         <div>
+          <figure><img src="https://placeimg.com/400/225/arch" alt="Shoes" /></figure>
+         </div>
+          <div class="card-body">
+            <h2 class="card-title">Shoes!</h2>
+            <p>If a dog chews shoes whose shoes does he choose?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">Buy Now</button>
+            </div>
+          </div>
+        </div> -->
       </section>
     </main>
    
