--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Public Portal</title>
     
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
+<script src="https://kit.fontawesome.com/55fbf7d7bf.js" crossorigin="anonymous"></script>
 
 </head>
 <body class="p-5">
