--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body class="p-5">
-    <header class="  md:max-w-max lg:max-w-max sm:max-w-2/12">
+    <header class="">
         <div class="navbar bg-base-100 border-b-4 border-indigo-200 border-b-indigo-500 ">
             <div class="flex-1">
               <a class="btn btn-ghost normal-case text-3xl text-yellow-500 ">Public portal</a>
@@ -99,7 +99,17 @@
         </div> -->
       </section>
     </main>
-   
+    <input type="checkbox" id="my-modal-3" class="modal-toggle" />
+    <div class="modal">
+      <div class="modal-box relative">
+        <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+      <div id="modal-body">
+          <!-- <h3 class="text-lg font-bold">Congratulations random Internet user!</h3>
+        <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p> -->
+      </div>
+    
+      </div>
+    </div>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="index.js"></script>
