added photo on card

--- a/index.html
+++ b/index.html
@@ -72,18 +72,19 @@
             </div>
           </div>
     </header>
-    <header >
-        <div class="navbar bg-base-100 ">
-            <div class="navbar-center  lg:flex">
-              <ul id="meau-list" class="menu menu-horizontal p-0">
-                <!-- <li><a>Item 1</a></li>
-                <li><a>Item 3</a></li> -->
-              </ul>
-            </div>
-          </div>
-    </header>
-
+    
     <main>
+      <header >
+          <div class="navbar bg-base-100 ">
+              <div class="navbar-center  lg:flex">
+                <ul id="meau-list" class="menu menu-horizontal p-0">
+                  <!-- <li><a>Item 1</a></li>
+                  <li><a>Item 3</a></li> -->
+                </ul>
+              </div>
+            </div>
+      </header>
+      <input type="text" id="inputField" class="p-3 pr-52 mx-auto  m-5 bg-base-300" >
       <section id="news-container">
         <!-- <div  class="card  card-compact w-96 bg-base-100 shadow-xl grid sm:grid-cols-1 lg:grid-cols-2 gap-4">
          <div>
@@ -99,6 +100,7 @@
         </div> -->
       </section>
     </main>
+   <section>
     <input type="checkbox" id="my-modal-3" class="modal-toggle" />
     <div class="modal">
       <div class="modal-box relative">
@@ -110,6 +112,7 @@
     
       </div>
     </div>
+   </section>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="index.js"></script>
