--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <header >
           <div class="navbar bg-base-100 ">
               <div class="navbar-center  lg:flex">
-                <ul id="meau-list" class="menu menu-horizontal p-0">
+                <ul id="ul-item" class="menu menu-horizontal p-0">
                   <!-- <li><a>Item 1</a></li>
                   <li><a>Item 3</a></li> -->
                 </ul>
               </div>
             </div>
       </header>
-      <input type="text" id="inputField" class="p-3 pr-52 mx-auto  m-5 bg-base-300" >
+      <!-- <input type="text" id="inputField" class="p-3 pr-52 mx-auto  m-5 bg-base-300" > -->
       <section id="news-container">
         <!-- <div  class="card  card-compact w-96 bg-base-100 shadow-xl grid sm:grid-cols-1 lg:grid-cols-2 gap-4">
          <div>
