--- a/index.html
+++ b/index.html
@@ -99,19 +99,20 @@
           </div>
         </div> -->
       </section>
+      <progress id="spinner" class="progress w-full hidden"></progress>
     </main>
    <section>
     <input type="checkbox" id="my-modal-3" class="modal-toggle" />
-    <div class="modal">
-      <div class="modal-box relative">
-        <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
-      <div id="modal-body">
-          <!-- <h3 class="text-lg font-bold">Congratulations random Internet user!</h3>
-        <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p> -->
-      </div>
-    
-      </div>
+<div class="modal">
+  <div class="modal-box relative">
+    <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+    <div id="modal-body">
+
+      <!-- <h3 class="text-lg font-bold">Congratulations random Internet user!</h3>
+      <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p> -->
     </div>
+  </div>
+</div>
    </section>
 
     <script src="https://cdn.tailwindcss.com"></script>
